<resources>
    <string name="app_name">LocBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="stepLabels">
        <item>Approval</item>
        <item>Processed</item>
        <item>Shipped</item>
        <item>Delivery</item>
    </string-array>
    <string name="user_policy">
Please read the following Terms and Conditions carefully before registering, accessing, browsing, downloading or using the Site or
by using of applications, content, products, and services (the “ Services ”) made available by “LocBook”. Your access and use of the
Services constitutes your agreement to be bound by these Terms, which establishes a contractual relationship between you and LocBook.
You agree to be bound by these Terms and Conditions set forth below including any additional guidelines and future modifications.
If at any time you do not agree to these Terms and Conditions or do not wish to be bound by these Terms and Conditions,
you may not access or use the mobile app and immediately terminate your use of the services.
These Terms and Conditions expressly supersede prior agreements or arrangements with you. Locbook may immediately terminate these
Terms or any Services with respect to you, or generally cease offering or deny access to the Services or any portion thereof,
at any time for any reason. LocBook may amend the Terms and Conditions related to the Services from time to time without any
prior notification. Amendments will be effective upon LocBook’s posting of such updated Terms and Conditions at this location or the
amended policies or supplemental terms on the applicable Service. Your continued access or use of the Services after such posting
constitutes your consent to be bound by the Terms and Conditions, as amended.
    </string>
    <string name="services">
        The Services constitute a technology platform that enables users of LocBook’s mobile applications provided as part of the Services 
        (each, an “ Application ”) to make Tickets. Unless otherwise agreed by LocBook in a separate written agreement with you, 
        the Services are made available solely for your personal, non-commercial use.
    </string>
    <string name="user_requirement">
        The Service is not available for use by persons under the age of 18. You may not authorize third parties to use your Account,
        and you may not allow persons under the age of 18 to receive the Services from Third Party Providers unless they are accompanied
        by you. You may not assign or otherwise transfer your Account to any other person or entity. You agree to comply with all
        applicable laws when using such Services, and you may only use the Services for lawful purposes. You will not, in your use of
        the Services, cause nuisance, annoyance, inconvenience, or property damage, whether to the Third Party Provider or any other party.
        In certain instances you may be asked to provide proof of identity to access or use the Services, and you agree that you may be
        denied access to or use of the Services if you refuse to provide proof of identity.
    </string>
    <string name="text_messeging">
        By creating an Account, you agree that the Services may send you informational text (SMS) messages, push notifications as part of 
        the normal business operation of your use of the Services. You may opt-out of receiving text (SMS) messages, notification from LocBook
        at any time by sending an email to  locbook@gmail.com indicating that you no longer wish to receive such messages, along with the
        phone number of the mobile device receiving the messages. You acknowledge that opting out of receiving text (SMS) messages may 
        impact your use of the Services.
    </string>
    <string name="net_access">
        You are responsible for obtaining the data network access necessary to use the Services. Your mobile network’s data and messaging
        rates and fees may apply if you access or use the Services from a wireless-enabled device and you shall be responsible for such
        rates. You are responsible for acquiring and updating compatible hardware or devices necessary to access and use the Services and
        Applications and any updates thereto. LocBook does not guarantee that the Services, or any portion thereof, will function on any
        particular hardware or devices. In addition, the Services may be subject to malfunctions and delays inherent in the use of the
        Internet and electronic communications.
    </string>
    <string name="payment">
        You understand that use of the Services may result in charges to you for the services you receive from a Third Party Provider.
        After you have received services obtained through your use of the Service, LocBook will facilitate your payment of the applicable
        Charges on behalf of the Third Party Provider through its associate Payment gateway. Payment of the Charges in such manner shall
        be considered the same as payment made directly by you to the Third Party Provider. Charges will be inclusive of applicable taxes
        where required by law.
        Charges paid by you are final and non-refundable, unless otherwise determined by LocBook. All Charges are due immediately and
        payment will be facilitated by LocBook using the preferred Payment Gateway as designated in your Account, after which LocBook will
        send you a payment confirmation by email. If your primary Payment Gateway is determined to be expired, invalid, unavailable or
        otherwise not able to be charged, you agree that LocBook may use a secondary Payment Gateway (if available) to claim the charge.
    </string>
    <string name="refund_policy">
        All sales of Tickets are final with no refund or exchange permitted. You are responsible for the mobile number. LocBook is not
        responsible for any purchase of Tickets for an incorrect details.
    </string>
    <string name="info">
        We value your trust and privacy. This Privacy Policy is in accordance with the Indian Information Technology Act, 2000 and the
        Information Technology (Reasonable security and procedures and sensitive personal data or information) Rules, 2011 prescribed
        thereunder, (“Applicable Law”) and provides you with details about the manner in which your data is collected, stored and used by us.
        This Privacy Policy is intended to provide you with clear and complete information about your treatment of the personally
        identifiable data and information that LocBook may collect in connection with the services offered by LocBook and the way your
        personally identifiable information and data is stored and used by LocBook. You are advised to read this Privacy Policy carefully,
        if you do not agree to the terms of the policy, please do not use or access LocBook.
        Personally Identifiable Information means any information that relates to a natural person, which, either directly or indirectly,
        in combination with other information available or likely to be available with LocBook, is capable of identifying such person.
        Therefore information such as your name, age, gender, date of birth, telephone/mobile number, e-mail ID, current location, and
        any other personal information that we collect, in combination with any other information about you, which is capable of identifying
        yourself, is known as personally identifiable information.
    </string>
    <string name="security">
        In certain areas LocBook uses industry-standard encryption to protect data transmissions.
    </string>
    <string name="changes_in_privacy_policy">
        LocBook may amend this privacy policy from time to time. If LocBook makes any substantial changes in the way Ridlr uses your
        personally identifiable information LocBook will notify you by posting a prominent announcement on LocBook.
    </string>
    <string name="about_us">
        LocBook tells you exactly when the next bus, train or metro rail will arrive so you can plan your journey with ease, even
        using multiple modes of transport. Timetables can be used without an internet connection to view them.
    </string>
</resources>